<resources>
    <string name="app_name">Rendszerfejlesztes</string>
    <string name="parent">Parent</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="norm_hour">Norm Hour</string>
    <string name="period">Period</string>
    <string name="instructions">Instructions</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="speciality">Speciality</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="deviceID">Device ID</string>
    <string name="date">Date</string>
    <string name="add_speciality">Add Speciality</string>
    <string name="add_category">Add Category</string>
    <string name="device_manager">Device Manager</string>
    <string name="specialist_adder">Specialist Adder</string>
    <string name="maintenance_creator">Maintenance Creator</string>
    <string name="task_manager">Task Manager</string>
    <string name="add_device">Add Device</string>
    <string name="device">Device</string>
    <string name="full_name">Full Name</string>
    <string name="qualification">Qualification</string>
    <string name="state">State</string>
    <string name="save">Save</string>
</resources>