<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    tools:context=".device.categoryCreator_activity">

    <EditText
        android:id="@+id/cat_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white_hint"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/norm_h_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white_hint"
        android:ems="10"
        android:hint="@string/norm_hour"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/period_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white_hint"
        android:ems="10"
        android:hint="@string/period"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/instructions_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white_hint"
        android:ems="10"
        android:hint="@string/instructions"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/parent_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spin_addcate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#50ACF6"
        android:fontFamily="sans-serif"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back_b"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="#FF50ACF6"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>