<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    tools:context=".speciality.specialityCreator_activity">

    <EditText
        android:id="@+id/spec_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white_hint"
        android:ems="10"
        android:hint="@string/speciality"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/category"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spin_categ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FF50ACF6"
        android:fontFamily="sans-serif"
        android:text="@string/add"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="#FF50ACF6"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconSize="40dp"
        app:iconTint ="@color/white"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>